# OBSReplayCompanion

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
src/: AudioDeviceFetcher.cpp  AudioDeviceFetcher.h  AudioVisualizer.cpp  AudioVisualizer.h  GameCapture.cpp  GameCapture.h  GlobalHotkey.cpp  GlobalHotkey.h  KeybindDialog.cpp  KeybindDialog.h  LogDialog.cpp  LogDialog.h  Logger.cpp  Logger.h  MainWindow.cpp  MainWindow.h  PreviewWidget.cpp  PreviewWidget.h  ProcessMonitor.cpp  ProcessMonitor.h  main.cpp
